--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,13 @@
 {
-  "java.jdt.ls.vmargs": "-javaagent:/usr/local/share/lombok/lombok-1.18.22.jar -Xbootclasspath/a:/usr/local/share/lombok/lombok-1.18.22.jar"
+  "java.jdt.ls.vmargs": "-javaagent:/usr/local/share/lombok/lombok-1.18.22.jar -Xbootclasspath/a:/usr/local/share/lombok/lombok-1.18.22.jar",
+  "java.configuration.runtimes": [
+        {
+            "name": "JavaSE-11",
+            "path": "/home/bruno/.sdkman/candidates/java/11.0.10.hs-adpt"
+        },
+        {
+            "name": "JavaSE-17",
+            "path": "/home/bruno/.sdkman/candidates/java/17.0.2-open"
+        }
+    ]
 }
